--- a/style.css
+++ b/style.css
@@ -7,26 +7,29 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #000000db;
+  width: 100%;
+  height: 100vh;
 }
 
 .container-player {
   margin: 0 auto;
   max-width: 1000px;
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   border: #ccc 1px solid;
   position: relative;
 }
 
 .player {
   width: 100%;
-  height: calc(100vh - 60%);
-  /* border: solid 1px rgb(255, 72, 0); */
+  height: 60%;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: #f1f1f1;
-  /* border: 1px solid #ccc; */
   background-image: url("https://t3.ftcdn.net/jpg/07/28/24/60/240_F_728246051_OH9xfZLCVzr5VbYFTz9ePx2hvci3uTqG.jpg");
   background-size: cover;
 }
@@ -37,14 +40,15 @@ body {
   justify-content: space-evenly;
   align-items: center;
   width: 100%;
+  height: 60%;
   padding: 0.7rem;
   background-image: url("https://t3.ftcdn.net/jpg/06/15/47/64/360_F_615476401_jqqBFIVMdGWhWoQo8bqu83XMMQoYxWmN.jpg");
   background-size: cover;
 }
 
 .visualizador-audio .animacao-player {
-  width: 170px;
-  height: 170px;
+  width: 13vw;
+  height: 13vw;
   border-radius: 50%;
   border: solid 2px #a3a2a2;
   display: flex;
@@ -75,7 +79,8 @@ body {
   align-items: center;
   justify-content: space-evenly;
   width: 100%;
-  height: 100%;
+  height: 35%;
+  padding: 0.2rem;
 }
 .container-controle-faixa .progresso {
   display: flex;
@@ -83,7 +88,7 @@ body {
   align-items: center;
   justify-content: center;
   width: 90%;
-  height: 60px;
+  /* height: 60px; */
 }
 
 .container-controle-faixa .progresso .barra-progresso {
@@ -126,10 +131,10 @@ marquee {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   width: 100%;
+  height: 70%;
   background: transparent;
-  gap: 10px;
 }
 
 .controles-files div button {
@@ -151,8 +156,7 @@ marquee {
   justify-content: flex-start;
   width: 100%;
   max-width: 1000px;
-  /* height: calc(100vh - 45%); */
-  height: calc(100vh - 40.5%);
+  height: 60%;
   border: #ccc 1px solid;
 }
 
@@ -220,7 +224,6 @@ marquee {
 }
 .container-lista table tbody tr td {
   padding: 10px;
-  /* border: 1px solid #ccc; */
   text-align: center;
 
   :hover {
@@ -229,6 +232,10 @@ marquee {
 }
 
 @media (max-width: 768px) {
+  .container-player {
+    /* height: 100%; */
+    justify-content: space-between;
+  }
   .player {
     width: 100%;
     justify-content: flex-start;
@@ -247,33 +254,51 @@ marquee {
     display: none;
   }
   .controles-files {
-    height: 70%;
+    /* height: 40%; */
   }
 
   .progresso {
     height: 50px;
   }
 
-  .controles-time {
+  /* .controles-time {
     height: 10px;
+  } */
+
+  /* .infoMp3 {
+    width: 100%;
+  } */
+
+  .controles-files div button {
+    padding: 5px;
+    margin: 0 5px;
+    /* font-size: 0.8rem; */
   }
 
-  .infoMp3 {
-    width: 100%;
+  /* .container-lista {
+    height: 40%;
+  } */
+
+  .container-lista table tbody tr td,
+  .container-lista table thead tr th {
+    font-size: 0.9rem;
+  }
+}
+
+@media (max-width: 350px) {
+  .container-player {
+    justify-content: space-between;
+  }
+
+  .player {
+    height: 55%;
+  }
+
+  .controles-files {
+    height: 100%;
   }
 
   .container-lista {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    width: 100%;
-    max-width: 1000px;
-    /* height: calc(100vh - 53%); */
-    height: calc(100vh - 40%);
-  }
-
-  .container-lista table tbody tr td {
-    /* border: 1px solid #ccc; */
-    font-size: 0.9rem;
+    height: 45%;
   }
 }
