--- a/style.css
+++ b/style.css
@@ -23,6 +23,11 @@ body {
   position: relative;
 }
 
+.container-closed {
+  display: none;
+  cursor: pointer;
+}
+
 .player {
   width: 100%;
   height: 60%;
@@ -232,6 +237,22 @@ marquee {
 }
 
 @media (max-width: 768px) {
+  .container-closed {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    font-size: small;
+    color: white;
+    border-radius: 50%;
+    background: linear-gradient(90deg, rgb(36, 4, 0) 0%, rgb(153, 24, 7) 0%, rgb(6, 41, 48) 100%);
+    z-index: 99;
+    width: 35px;
+    height: 35px;
+    top: 0;
+    right: 0;
+    margin: 15px;
+  }
   .container-player {
     /* height: 100%; */
     justify-content: space-between;
