--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border: #ccc 1px solid;
+  /* border: #ccc 1px solid; */
   position: relative;
 }
 
